# cc1005-quickcheck

./: LICENSE  README.md  cc1005-quickcheck.cabal
src/: ProofsAndTests.hs
