cabal-version:      3.0
name:               cc1005-quickcheck
version:            0.1.0.0
synopsis:           Testing simple equational properties using QuickCheck
license:            MIT
license-file:       LICENSE
author:             Pedro Vasconcelos
maintainer:         pbv@dcc.fc.up.pt
category:           Educational
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: 

library
    exposed-modules:  ProofsAndTests
    build-depends:    base, QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010
